<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Help_line_numbers">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="#e9ecef">

                    <LinearLayout
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="sans-serif"
                            android:text="@string/emergency_helpline"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="34sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="sans-serif"
                            android:text="@string/shakti_source"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="150dp"
                        android:layout_gravity="start"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/girl_vector" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/SOS_Contacts_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textColor="#d90429"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:id="@+id/calll"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#e9ecef"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/call"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:contentDescription="@string/police_100"
                            android:src="@drawable/police_helpline_logo" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/police_100"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="#e9ecef">

                        <ImageView
                            android:id="@+id/call2"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/fire_safety_101"
                            android:src="@drawable/fire_safety_logo"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fire_safety_101"
                            android:textAlignment="center"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="#e9ecef">

                        <ImageView
                            android:id="@+id/call3"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/women_helpline_181"
                            android:src="@drawable/women_helpline_logo"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/women_helpline_181"
                            android:textAlignment="center"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="25dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="#e9ecef">

                        <ImageView
                            android:id="@+id/call4"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/ambulance_102"
                            android:src="@drawable/ambulance_logo"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ambulance_102"
                            android:textAlignment="center"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin ="25dp"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="#e9ecef"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>